--- a/curiosity_kills_the_cat/index.html
+++ b/curiosity_kills_the_cat/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="icon/icon.png" type="image/png">
         <link rel="apple-touch-icon" href="icon/icon.png">
         <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
-        <title>curiosity_kills_the_cat</title>
+        <title>Curiosity Kills the Cat</title>
     </head>
     <body style="background-color: black">
         <script type="text/javascript" src="js/libs/pixi.js"></script>
